tests/NormalTests/paczka1/fuzzy1/81453657.err
Error in line 9: btWbWbnCOG S760 76,26
Error in line 4: kwRr A370 82,1
Error in line 15: xWaFqY8 S760 3,1
Error in line 12: btWbWbnCOG A370 34,8
Error in line 29: xWaFqY8 A464 1,3
Error in line 31: xWaFqY8 A445 73,7
Error in line 34: kwRr A445 47,6
